Fixing alignment

--- a/styles.css
+++ b/styles.css
@@ -6,19 +6,15 @@
 	margin-left: auto;
 	margin-right: auto;
 	max-width: 700px;
-	background: darkgray;
+	background: #cae8d5;
 }
-img {
-	display: flex;
-	margin-left: auto;
-	margin-right: auto;
-}
+
 #container {
 	display: flex;
 	flex-wrap: wrap;
 	margin: auto;
 	max-width: 600px;
-	border: 50px solid #b30000;
+	border: 50px solid #84a9ac;
 	border-radius: 8px;
 	align-items: center;
 }
@@ -32,7 +28,7 @@ img {
 	align: center;
 	display: flex;
 	align-items: center;
-	padding: 10px;
+	padding: 2rem;
 	width: 500px;
 	margin: auto;
 }
@@ -42,10 +38,11 @@ img {
 	flex: 1;
 }
 .cell {
-	background: rgba(255, 255, 255, 0);
+	background: #3b6978;
 }
 
 .heading {
+	padding: 10px;
 	color: black;
 	position: relative;
 	text-align: center;
